force-app/main/default/objects/AV_ExperienceBusiness__c/AV_ExperienceBusiness__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene la información de las Experiencias de la estructura comercial relacionadas con el negocio</description>
    <label>Experiencia-Negocio</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Experiencia-Negocio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiencia-Negocio</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>