force-app/main/default/objects/AV_ExperienceBusiness__c/fields/AV_MyBox__c.field-meta.xml
<CustomField>
    <fullName>AV_MyBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de si está mybox</description>
    <label>MyBox</label>
    <type>Checkbox</type>
</CustomField>