force-app/main/default/objects/AV_ExperienceBusiness__c/fields/AV_Orden__c.field-meta.xml
<CustomField>
    <fullName>AV_Orden__c</fullName>
    <description>Orden en el que se muestra la experiencia</description>
    <label>Orden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>