force-app/main/default/objects/AV_ExperienceBusiness__c/recordTypes/AV_ExperienciaNegocio.recordType-meta.xml
<RecordType>
    <fullName>AV_ExperienciaNegocio</fullName>
    <active>true</active>
    <label>Experiencia Negocio</label>
</RecordType>